# praetorian-api

./: .env.example  .flake8  .gitignore  404.html  CHANGELOG.md  Dockerfile  Dockerfile.web  LICENSE  README.md  docker-compose.yml  index.html  manage.py  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: docker-api.yml  docker-web.yml  docker.yml
access_sources/: index.html
apps/api/: encoders.py  errors.py  permissions.py  response.py  urls.py
apps/api/auth/: aes_encryptor.py  backend.py  decorators.py  ldap_backend.py
apps/api/filters/: api_key.py  audit_log.py  device.py  log.py  log_entry.py  project.py  remote.py  service.py  user.py
apps/api/forms/: api_key.py  auth.py  device.py  log.py  password.py  project.py  remote.py  service.py  temporary_user.py  user.py
apps/api/middleware/: device.py  exceptions.py  signature.py  token.py
apps/api/views/: api_key.py  audit_log.py  auth.py  device.py  log.py  log_entry.py  project.py  remote.py  service.py  temporary_user.py  user.py
apps/core/checkers/: __init__.py  project.py  remote.py
apps/core/fields/: aes_json_field.py  aes_text_field.py
apps/core/fixtures/: api_keys.json  devices.json  languages.json  projects.json  remotes.json  services.json  user_project_devices.json  users.json  users_projects_devices.json
apps/core/managers/: user.py
apps/core/migrations/: 0001_initial.py  0002_add_logs.py  0003_user_creator.py  0004_auth_source.py  0005_audit_logs.py
apps/core/models/: __init__.py  api_key.py  audit_log.py  auth_source.py  auth_source_group.py  device.py  language.py  log.py  log_entry.py  password_recovery.py  project.py  remote.py  service.py  token.py  (+2 more)
apps/web/: urls.py
conf/: supervisor.conf
conf_web/: entrypoint.sh  supervisor.conf
deploy_example/: index.html
docs/: access_sources.md  authentication.md  deploy_example.md  eer_diagram.md  eer_diagram.mwb  features.md  index.md  security.md  supported_configurations.md  supported_services.md
docs/communication/: dump.pcap
docs/thesis/: bibliography.bib  main.tex  packages.tex  values.tex
eer_diagram/: index.html
features/: index.html
praetorian_api/: asgi.py  urls.py  wsgi.py
praetorian_api/settings/: base.py  development.py  web.py
search/: search_index.json
security/: index.html
supported_configurations/: index.html
templates/_emails/: 2fa_activation.html  password_recovery.html  temporary_user_activation.html
templates/logs/: log_detail.html  log_display.html
templates/web/: log_list.html  partial_log.html
thesis/: bibliography.bib  index.html  initialize.tex  main.tex  packages.tex  values.tex
thesis/content/: appendix1.tex  appendix3.tex  chapter2.tex  chapter3.tex  chapter5.tex  chapter6.tex  chapter7.tex
thesis/pages/: acknowledgements.tex  annotation.tex  declaration.tex  titlepage.tex
thesis/templates/: header.tex
(+35 files in other folders)
